Remove overflow auto, causing scroll issues in hours of operation widget.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -2,7 +2,6 @@
  * Form fields
  */
 .wpcw-widget .form {
-	overflow: auto;
 	margin-bottom: 1em;
 }
 .wpcw-widget .title {
